<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textview_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/normalText"
        android:paddingTop="@dimen/margin_medium_small"
        android:paddingBottom="@dimen/margin_medium_small"/>

    <View
        android:id="@+id/divier"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/textview_title"
        android:background="@color/divider"/>

    <DatePicker
        android:id="@+id/datepicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:calendarViewShown="false"
        android:spinnersShown="true"
        android:datePickerMode="spinner"/>

    <CheckBox
        android:id="@+id/checkbox_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@null"
        android:textColor="@color/tipText"
        android:textSize="@dimen/normal_text_size"
        android:text="@string/all"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider"
        android:layout_marginTop="@dimen/margin_medium"/>

    <LinearLayout
        android:id="@+id/linearlayout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="13dp"
            android:paddingBottom="13dp"
            android:clickable="true"
            android:gravity="center"
            android:textSize="@dimen/normal_text_size"
            android:textColor="@color/normalText"
            android:text="@string/cancel"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/contentBackground"/>

        <TextView
            android:id="@+id/textview_ensure"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="13dp"
            android:paddingBottom="13dp"
            android:clickable="true"
            android:gravity="center"
            android:textSize="@dimen/normal_text_size"
            android:textColor="@color/normalText"
            android:text="@string/ensure"/>

    </LinearLayout>

</LinearLayout>

