<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.MainActivity">

    <include layout="@layout/toolbar_with_title" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/ic_home_banner"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:paddingTop="@dimen/margin_large"
        android:paddingBottom="@dimen/margin_large"
        android:background="@drawable/round_rectangle_white_5dp">

        <LinearLayout
            android:id="@+id/layout_device_running"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="onItemClick"
            app:layout_constraintRight_toLeftOf="@id/layout_video_monitor"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_device_running" />

            <TextView
                android:id="@+id/text_device_running"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginLeft="@dimen/margin_medium"
                android:gravity="center"
                android:text="@string/device_running"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            android:layout_width="0.5dp"
            android:layout_height="27dp"
            app:layout_constraintTop_toTopOf="@id/layout_device_running"
            app:layout_constraintBottom_toBottomOf="@id/layout_device_running"
            app:layout_constraintLeft_toRightOf="@id/layout_device_running"
            app:layout_constraintRight_toLeftOf="@id/layout_video_monitor"
            android:background="@color/divider"/>

        <LinearLayout
            android:id="@+id/layout_video_monitor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="onItemClick"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/layout_device_running"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_video_monitor" />

            <TextView
                android:id="@+id/text_video_monitor"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginLeft="@dimen/margin_medium"
                android:text="@string/video_monitor"
                android:textSize="16sp"
                android:gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_text_warning"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:onClick="onItemClick"
            app:layout_constraintRight_toLeftOf="@id/layout_history_data"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_device_running"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_warning"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingEnd="4dp"
                android:src="@drawable/ic_warnning_info" />

            <TextView
                android:id="@+id/text_warning"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="@string/warning_info"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="0.5dp"
            android:layout_height="27dp"
            app:layout_constraintTop_toTopOf="@id/layout_text_warning"
            app:layout_constraintBottom_toBottomOf="@id/layout_text_warning"
            app:layout_constraintLeft_toRightOf="@id/layout_text_warning"
            app:layout_constraintRight_toLeftOf="@id/layout_history_data"
            android:background="@color/divider"/>

        <LinearLayout
            android:id="@+id/layout_history_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="onItemClick"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/layout_text_warning"
            app:layout_constraintTop_toTopOf="@id/layout_text_warning"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_history" />

            <TextView
                android:id="@+id/text_history_data"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginLeft="@dimen/margin_medium"
                android:text="@string/history_data"
                android:textSize="16sp"
                android:gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_maintaince"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="onItemClick"
            app:layout_constraintRight_toLeftOf="@id/layout_org_info"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_text_warning"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_maintaince" />

            <TextView
                android:id="@+id/text_maintaince"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginLeft="@dimen/margin_medium"
                android:text="@string/device_maintaince"
                android:textSize="16sp"
                android:gravity="center" />
        </LinearLayout>

        <View
            android:layout_width="0.5dp"
            android:layout_height="27dp"
            app:layout_constraintTop_toTopOf="@id/layout_maintaince"
            app:layout_constraintBottom_toBottomOf="@id/layout_maintaince"
            app:layout_constraintLeft_toRightOf="@id/layout_maintaince"
            app:layout_constraintRight_toLeftOf="@id/layout_org_info"
            android:background="@color/divider"/>

        <LinearLayout
            android:id="@+id/layout_org_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="onItemClick"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/layout_maintaince"
            app:layout_constraintTop_toTopOf="@id/layout_maintaince"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_org_info" />

            <TextView
                android:id="@+id/text_org_info"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginLeft="@dimen/margin_medium"
                android:text="@string/org_info"
                android:textSize="16sp"
                android:gravity="center" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>